# GooeyGUI

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  DoxyFile  Doxyfile  Makefile  dark.json  gooey.h  gooey.old  gooey_homepage.md  gui.kdev4  hello_window.c  light.json  logs.txt  main  main.c  main.cpp  opengl_basics.md  readme.md  tiny.c  tiny.h
.kdev4/: gui.kdev4
backends/: glad.c  glfw_backend.c  gooey_backend.h  gooey_colors.h  gooey_event.h  gooey_widgets.h  wayland_backend.c  x11_backend.c
backends/glad/: glad.h
backends/utils/: glad.c  glfw_utils.c  glfw_utils.h  gooey_event.h  gooey_widgets.h
backends/utils/glfw/: glfw_utils.c  glfw_utils.h
backends/utils/themes/: theme_parser.c  theme_parser.h
examples/: b.sh  colormixer.c  counter.c  plots  plots.c  showcase.c  todolist.c
html/: annotated.html  annotated_dup.js  classes.html  dir_52e97556b4e632ff632666369c1112e5.html  dir_52e97556b4e632ff632666369c1112e5.js  dir_b0040da22636471b5376bc38bdaab34f.html  dir_b0040da22636471b5376bc38bdaab34f.js  dir_dec21994cd756836ecefab773235960a.html  dir_dec21994cd756836ecefab773235960a.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  glad_8c.html  glad_8c.js  glfw__backend_8c.html  glfw__backend_8c.js  glfw__utils_8c.html  glfw__utils_8c.js  glfw__utils_8h.html  glfw__utils_8h.js  glfw__utils_8h_source.html  globals.html  globals_a.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_l.html  globals_m.html  globals_o.html  globals_p.html  globals_q.html  (+140 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+56 more)
include/: gooey.h
include/signals/: gooey_signals.h
include/widgets/: gooey_button.h  gooey_canvas.h  gooey_checkbox.h  gooey_dropdown.h  gooey_label.h  gooey_layout.h  gooey_list.h  gooey_menu.h  gooey_messagebox.h  gooey_plot.h  gooey_radiobutton.h  gooey_slider.h  gooey_textbox.h
internal/: gooey_backend_internal.h  gooey_event_internal.h  gooey_widgets_internal.h
internal/core/: gooey_backend_internal.h  gooey_common.h  gooey_window.h
internal/utils/backends/: backend_utils.h
internal/utils/glfw/: glfw_utils.h
internal/utils/logger/: gooey_logger_internal.h
latex/: annotated.tex  dir_52e97556b4e632ff632666369c1112e5.tex  dir_b0040da22636471b5376bc38bdaab34f.tex  dir_dec21994cd756836ecefab773235960a.tex  files.tex  glad_8c.tex  glfw__backend_8c.tex  glfw__utils_8c.tex  glfw__utils_8h.tex  glfw__utils_8h_source.tex  gooey_8h.tex  gooey_8h_source.tex  gooey__backend_8h.tex  gooey__backend_8h_source.tex  gooey__colors_8h.tex  gooey__colors_8h_source.tex  gooey__event_8h.tex  gooey__event_8h_source.tex  gooey__homepage_8md.tex  gooey__widgets_8h.tex  gooey__widgets_8h_source.tex  group__iface__xdg__popup.tex  group__iface__xdg__positioner.tex  group__iface__xdg__surface.tex  group__iface__xdg__toplevel.tex  group__iface__xdg__wm__base.tex  index.tex  linmath_8h.tex  linmath_8h_source.tex  main_8c.tex  md_opengl__basics.tex  md_readme.tex  opengl__basics_8md.tex  page_iface_xdg_popup.tex  page_iface_xdg_positioner.tex  page_iface_xdg_surface.tex  page_iface_xdg_toplevel.tex  page_iface_xdg_wm_base.tex  page_xdg_shell.tex  refman.tex  (+33 more)
scripts/: apply-cjson-submodule-patch.sh  cjson_submodule.diff  cjson_submodule.patch
src/backends/: glfw_backend.c  glps_backend.c  x11_backend.c
src/core/: gooey.c  gooey_common.c  gooey_window.c
src/signals/: gooey_signals.c
src/utils/backends/: backend_utils.c
src/utils/glad/: glad.c
src/utils/glfw/: glfw_utils.c
src/utils/logger/: gooey_logger.c
src/utils/theme/: gooey_theme.c
src/widgets/: gooey_button.c  gooey_canvas.c  gooey_checkbox.c  gooey_dropdown.c  gooey_label.c  gooey_layout.c  gooey_list.c  gooey_menu.c  gooey_messagebox.c  gooey_plot.c  gooey_radiobutton.c  gooey_slider.c  gooey_textbox.c
test_app/: logs.txt  my_app  test.c
website/: index.html
xml/: Doxyfile.xml  dir_52e97556b4e632ff632666369c1112e5.xml  dir_b0040da22636471b5376bc38bdaab34f.xml  dir_dec21994cd756836ecefab773235960a.xml  glfw__backend_8c.xml  glfw__utils_8c.xml  glfw__utils_8h.xml  gooey__backend_8h.xml  gooey__homepage_8md.xml  index.xml  indexpage.xml  main_8c.xml  md_opengl__basics.xml  opengl__basics_8md.xml  structCharacter.xml  structGooeyBackend.xml  structGooeyBackendContext.xml  structGooeyWindow.xml  structVertex.xml  tiny_8c.xml  tiny_8h.xml  wayland__backend_8c.xml  x11__backend_8c.xml
